# play-Python

./: .gitignore  README.md  pyproject.toml
LLM/: pyproject.toml
LLM/torch/: index.py
app/: README.md  edit_file.sh  index.py  slice_audio.sh
app/audio/: generate.py  index.py
app/dict/api/: Baidu_Text_transAPI.py  PyGlossary_translate.py
app/download/: index.py
app/lrc/: generate_role.py
app/utils/: download_audio.py  generate_lrc.py  generate_lrc_role.py  patch_add_data.py  sclice_audio.py
app/utils/analyze/: chain.py  prompt.py  schemas.py  test.py
src/: 10file.py  10file_os.py  11file.py  12error.py  13Class.py  1input.py  2-number.py  2number.py  3-1list.py  3-2list_sort.py  3-3list_other.py  3-4deep_copy.py  3-5tuple.py  3-6set.py  4-string.py  5-dict.py  6-loop.py  7-def.py  8-module.py  README.md  addresses.dir  circle.py  circle_cm.py  mio.py  mio_test.py  moby_01_clean.txt  mymath.py  outfile.txt  sole.py  tempCodeRunnerFile.py  word_count_program_stdin.py
src/9program/: n2w.py  opts.py  replace.py  script2.py  script4.py  script5.py  script6.py
src/test/: 2.txt
