[project]
name = "play-Python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kkkkh", email = "13693256971@163.com"},
]
dependencies = ["tqdm>=4.67.1", "requests>=2.32.5", "faster-whisper>=1.2.1", "pyannote-audio>=4.0.2", "langchain>=1.2.6", "langchain-openai>=1.1.7", "pydantic>=2.12.5", "dotenv>=0.9.9"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
[tool.pdm.sources]
pypi = { url = "https://pypi.tuna.tsinghua.edu.cn/simple", verify_ssl = true, secondary = false }
