[project]
name = "LLM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kkkkh", email = "n290022398@gmail.com"},
]
dependencies = ["torch==2.4.0", "numpy<2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "torch/index.py"
